# OC_P12_Extraction_Donnees_Multimodales

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  requirements-airflow.txt  transform.py  verify.py
dags/: etl_multimodal.py
dashboard/: app.py  charts.py  kpi.py
docker/: init-db.sql
docs/: schema_donnees.md
notebooks/: 01_sample_articles.ipynb
reports/: 01_exploration_sources.md  monitoring_plan.md
src/extractors/: base.py  fakeddit.py  hemt_fake.py  mediaeval.py  miragenews.py  mmfakebench.py  rss.py  types.py
src/load/: postgres_loader.py
src/metrics/: exporter.py
src/transform/: pipeline.py
src/transform/steps/: check_association.py  clean_text.py  deduplicate.py  enrich.py  map_labels.py  normalize_date.py  validate_image.py
src/utils/: image.py  io.py  logger.py
tests/: conftest.py  test_config.py
tests/test_extractors/: test_base.py  test_fakeddit.py  test_hemt_fake.py  test_mediaeval.py  test_miragenews.py  test_rss.py  test_types.py
tests/test_transform/: test_check_association.py  test_clean_text.py  test_deduplicate.py  test_enrich.py  test_map_labels.py  test_normalize_date.py  test_pipeline.py  test_validate_image.py
tests/test_utils/: test_image.py  test_io.py
