[project]
name = "oc-p12-extraction-donnees-multimodales"
version = "0.1.0"
description = "Extraction de données multimodales pour la détection de fake news"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "feedparser>=6.0",
    "pandas>=2.2",
    "datasets>=3.0",
    "Pillow>=11.0",
    "tqdm>=4.67",
    "python-dotenv>=1.0",
    "pyarrow>=23.0.1",
    "sqlalchemy>=2.0.48",
    "psycopg2-binary>=2.9.11",
    "cryptography>=46.0.5",
    "streamlit>=1.55.0",
    "altair>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "responses>=0.25",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "responses>=0.26.0",
]
